--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIKI CENTRAL</title>
+    <title>GIK-CENTRAL</title>
 
     <!-- 
     - favicon
@@ -36,7 +36,7 @@
     <header class="header" data-header>
       <div class="container">
 
-        <a href="#" class="logo">GIKI CENTRAL</a>
+        <a href="#" class="logo">GIK-CENTRAL</a>
 
         <nav class="navbar container" data-navbar>
           <ul class="navbar-list">
@@ -944,7 +944,7 @@
 
         <p class="copyright">
           &copy; 2025 .All rights reeserved <a href="#"
-            class="copyright-link">spectre0037</a>
+            class="copyright-link">GIK-CENTRAL</a>
         </p>
 
       </div>
