--- a/GIK-CENTRAL/Resources/TUCK/Tuck.html
+++ b/GIK-CENTRAL/Resources/TUCK/Tuck.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GIKI Food Central</title>
+  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
 
   <!-- Swiper.js CDN -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
