--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -880,8 +880,12 @@
 
                     <h3 class="h3 card-title">Mail Here</h3>
 
-                    <a href="mailto:hello@luaz.com"
+                    <a href="mailto:gikicentral@gmail.com"
                       class="card-link">gikicentral@gmail.com</a>
+                    <a href="mailto:lostandfound.gikicentral@gmail.com"
+                      class="card-link">lostandfound.gikicentral@gmail.com</a>
+                    <a href="mailto:gikcentralservices@gmail.com"
+                      class="card-link">gikcentralservices@gmail.com</a>
 
                   </div>
 
