--- a/GIK-CENTRAL/index.html
+++ b/GIK-CENTRAL/index.html
@@ -48,6 +48,9 @@
             <li>
               <a href="#service" class="navbar-link" data-nav-link>Services</a>
             </li>
+            <li>
+              <a href="#resources" class="navbar-link" data-nav-link>Resources</a>
+            </li>
 
             <li>
               <a href="#project" class="navbar-link" data-nav-link>Societies</a>
@@ -275,7 +278,7 @@
         <!-- 
         - #PROJECT
       -->
-        <section class="section service" id="service" aria-label="service">
+        <section class="section resources" id="service" aria-label="service">
           <div class="container">
 
             <h2 class="h2 section-title">RESOURCES FOR STUDENTS</h2>
