--- a/GIK-CENTRAL/Beginners-Guide/timeline/Beginners-Guide.html
+++ b/GIK-CENTRAL/Beginners-Guide/timeline/Beginners-Guide.html
@@ -136,7 +136,7 @@
                                 <br>
                                 <i>BS Artificial Intelligence</i>
                                 <br>
-                                <i>Data Science</i>
+                                <i>BS Data Science</i>
                                 <br>
                                 <i> BS Software Engineering</i>
                                 <br>
@@ -164,7 +164,7 @@
                                     Engineering
                                     (FMCE)
                                 </h3>
-                                Home to Mechanical engineering department:
+                                Home to Materials and chemical engineering department:
                                 <br>
                                 Degrees Offered:
                                 <br>
@@ -203,7 +203,7 @@
                                 GIKI offers on-campus accommodation in multiple
                                 hostels:
                                 <h3>For Boys : Hostel 1-6 & 8-12</h3>
-                                There are only double 2-bed rooms in hostel 8-12
+                                There are only double/2-bed rooms in hostel 8-12
                                 <br>
                                 meanwhile hostel 1-6 contains single room and a
                                 few  2-bed room <br>
@@ -214,7 +214,7 @@
                                 <h4>Third and fourth Year students stay in
                                     hostel 1 to 6</h4>
                                 For the first two years, students are bound to
-                                live in double bed room hostels <br>
+                                live in 2-bed room hostels <br>
                                 From third year onwards ,Single rooms are
                                 alloted for students lying above certain CGPA
                                 <br>
